# CMSLayoutBuilder

./: .gitignore  README.md  build.bat  specification.md
extends/webcron/: cms_project.json  common.php  index.php
extends/webcron/includes/: db.php
extends/webcron/views/: tab_env.php  tab_jobs.php
tauri-app/: generate-icon.js  index.html  package-lock.json  package.json  vite.config.js
tauri-app/src/: App.vue  db.js  htmlExport.js  store.js  style.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src/components/: ComponentCanvas.vue  DiffModal.vue  HelpModal.vue  IconPicker.vue  InlineEdit.vue  MenuBuilder.vue  PortalBuilder.vue
